# restack_prototype

./: .gitignore  CONTRIBUTING.md  pyproject.toml  readme.md
agent_telephony/twilio_livekit/agent_twilio/: .env.Example  .gitignore  README.md  event_agent.py  pyproject.toml  requirements.txt  schedule_agent.py
agent_telephony/twilio_livekit/agent_twilio/src/: client.py  services.py
agent_todo/: README.md  pyproject.toml  requirements.txt  schedule.py
agent_todo/src/: services.py
agent_todo/src/agents/: agent_todo.py
agent_todo/src/functions/: get_random.py  get_result.py  llm_chat.py  todo_create.py
agent_todo/src/workflows/: todo_execute.py
agent_tool/: README.md  pyproject.toml  requirements.txt
agent_tool/src/: services.py
agent_tool/src/agents/: chat_tool_functions.py
agent_tool/src/functions/: llm_chat.py  lookup_sales.py
agent_video/: .env.example  README.md  pyproject.toml
agent_video/src/: services.py
agent_video/src/agents/: agent.py
agent_video/src/functions/: context_docs.py  pipeline.py
agent_video/src/workflows/: room.py
audio_transcript/: README.md  pyproject.toml  requirements.txt  schedule_workflow.py
audio_transcript/src/: client.py  services.py
audio_transcript/src/functions/: transcribe_audio.py  translate_text.py
audio_transcript/src/workflows/: transcribe_translate.py
child_workflows/: Dockerfile  README.md  pyproject.toml  requirements.txt  schedule_workflow.py
child_workflows/src/: client.py  services.py
child_workflows/src/functions/: function.py
child_workflows/src/workflows/: child.py  parent.py
community/bostondynamics_spot/: .env.example  README.md  pyproject.toml  schedule_workflow.py
community/bostondynamics_spot/src/: client.py  services.py  spot_services.py
community/bostondynamics_spot/src/functions/: function.py
community/bostondynamics_spot/src/workflows/: workflow.py
community/custom_llm_gemini/: README.md  pyproject.toml
community/defense_quickstart_audio_transcription_translation/: .env.example  README.md  frontend.py  pyproject.toml
community/defense_quickstart_audio_transcription_translation/src/: app.py  services.py
community/defense_quickstart_audio_transcription_translation/src/functions/: transcribe.py  translate.py
community/defense_quickstart_audio_transcription_translation/src/workflows/: child.py  parent.py
community/defense_quickstart_denoise/: .env.example  README.md  frontend.py  pyproject.toml
community/defense_quickstart_denoise/src/: app.py  services.py
community/defense_quickstart_denoise/src/functions/: denoise.py
community/defense_quickstart_denoise/src/workflows/: child.py  parent.py
community/defense_quickstart_news_scraper_summarizer/: .env.example  README.md  frontend.py  pyproject.toml
community/defense_quickstart_news_scraper_summarizer/src/: app.py  client.py  services.py
community/defense_quickstart_news_scraper_summarizer/src/workflows/: workflow.py
community/docling/: Dockerfile  pyproject.toml  readme.md
community/docling/src/: services.py
community/docling/src/agents/: agent.py
community/docling/src/functions/: function.py
community/docling/src/workflows/: workflow.py
community/e2b/: .env.Example  README.md  pyproject.toml  schedule_workflow.py
community/e2b/src/: services.py
community/e2b/src/functions/: e2b_execute_python.py  openai_tool_call.py
community/e2b/src/workflows/: code_execution.py  many_code_executions.py
community/elevenlabs/: .env.EXAMPLE  .gitignore  README.md  pyproject.toml  schedule_workflow_audio_isolation.py
community/elevenlabs/src/workflows/: workflow.py
community/email_sender/: .env.example  README.md  pyproject.toml  requirements.txt  schedule_workflow.py  schedule_workflow_failure.py
community/email_sender/src/: client.py  services.py
community/email_sender/src/functions/: generate_email_content.py  send_email.py
community/email_sender/src/workflows/: send_email.py
community/fastapi_gemini_feedback/: .env.example  README.md  pyproject.toml
community/fastapi_gemini_feedback/src/functions/: function.py
community/fastapi_togetherai_llama/: .env.example  README.md  nginx.conf  pyproject.toml
community/fastapi_togetherai_llama/src/: app.py  client.py  services.py
community/flask_gemini/: .env.Example  README.md  pyproject.toml
community/flask_gemini/src/functions/: function.py
community/flask_togetherai_llamaindex/: .env.example  README.md  pyproject.toml  schedule_workflow.py
community/flask_togetherai_llamaindex/src/: app.py  services.py
community/gemini/: .env.Example  .gitignore  README.md  pyproject.toml  schedule_workflow.py
community/gemini/src/: services.py
community/openai_greet/: README.md  pyproject.toml  requirements.txt
community/openai_greet/src/: services.py
community/re_act/: README.md  pyproject.toml  requirements.txt  schedule_workflow.py
community/re_act/src/: services.py
community/streamlit/: pyproject.toml  readme.md
community/streamlit_fastapi_togetherai_llama/: .env.example  README.md  pyproject.toml
community/streamlit_fastapi_togetherai_llama/src/: app.py  services.py
community/stripe_ai/: .env.example  README.md  pyproject.toml  schedule_workflow.py
community/stripe_ai/src/: services.py
community/weaviate_search/: .env.example  README.md  pyproject.toml  schedule_workflow.py
community/weaviate_search/src/: services.py
encryption/: .env.example  README.md  pyproject.toml  requirements.txt  schedule_workflow.py
encryption/src/: client.py  codec.py  codec_server.py  services.py
encryption/src/workflows/: workflow.py
pdf_ocr/: .env.Example  Dockerfile  README.md  pyproject.toml  requirements.txt
pdf_ocr/src/: client.py  services.py
pdf_ocr/src/functions/: openai_chat.py  torch_ocr.py
pdf_ocr/src/workflows/: files.py  pdf.py
production_demo/: .env.Example  README.md  pyproject.toml  requirements.txt  schedule_interval.py  schedule_scale.py  schedule_workflow.py
production_demo/src/: services.py
production_demo/src/functions/: evaluate.py  generate.py
production_demo/src/workflows/: child.py  workflow.py
(+168 files in other folders)
