[project]
name = "examples-python"
version = "0.0.1"
requires-python = ">=3.10,<3.14"

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]

[tool.ruff]
line-length = 66

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = ["ANN401", "E501", "D100", "D101", "D102", "D103", "D107", "TRY002", "D213", "D203", "COM812", "D104", "INP001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 66

[tool.ruff.lint.pydocstyle]
convention = "google"