[project]
name = "audio_transcript"
version = "0.0.1"
description = "Transcribe audio with OpenAI Whisper and translate the text with OpenAI gpt-4.1-mini"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "openai>=1.61.0",
    "pydantic>=2.10.6",
    "restack-ai==0.0.81",
    "watchfiles>=1.0.4",
    "python-dotenv==1.0.1",
]

[project.scripts]
dev = "src.services:watch_services"
services = "src.services:run_services"
schedule = "schedule_workflow:run_schedule_workflow"
schedule_failure = "schedule_workflow_failure:run_schedule_workflow_failure"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
