[project]
name = "encryption"
version = "0.0.1"
description = "A simple example to get started with the restack-ai SDK"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "aiohttp>=3.11.10",
    "restack-ai==0.0.81",
]

[project.scripts]
services = "src.services:run_services"
schedule = "schedule_workflow:run_schedule_workflow"
codec = "src.codec_server:run_codec_server"

[dependency-groups]
dev = ["pytest==6.2"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
