[project]
name = "bostondynamics_spot"
version = "0.0.1"
description = "A simple example to get started with the restack-ai SDK"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.6",
    "restack-ai==0.0.81",
    "watchfiles>=1.0.4",
    "python-dotenv==1.0.1",
    "openai>=1.61.0",
    "bosdyn-client==4.1.0",
    "opencv-python==4.10.0.84",
    "setuptools==75.6.0",
]

[project.scripts]
services = "src.services:run_services"
spot = "src.spot_services:run_services"
schedule = "schedule_workflow:run_schedule_workflow"

[dependency-groups]
dev = ["pytest==6.2"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
