[project]
name = "custom_llm_gemini"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.6",
    "restack-ai==0.0.81",
    "watchfiles>=1.0.4",
    "python-dotenv==1.0.1",
    "flask==3.0.3",
    "requests==2.32.3",
    "aiohttp==3.10.10",
    "flask-cors==5.0.0",
    "rich==13.9.2",
    "google-generativeai==0.8.3",
    "h11==0.14.0",
]

[project.scripts]
llm = "src.llm:run_llm"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
