[project]
name = "defense_quickstart_audio_transcription_translation"
version = "0.0.1"
description = "Transcribe war-related audio recordings and translate them into English with this example repository"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.6",
    "restack-ai==0.0.81",
    "watchfiles>=1.0.4",
    "python-dotenv==1.0.1",
    "openai>=1.61.0",
    "fastapi==0.115.4",
    "uvicorn==0.32.0",
    "streamlit==1.40.0",
    "requests==2.32.3",
    "groq>=0.13.0,<0.14",
]

[project.scripts]
services = "src.services:run_services"
app = "src.app:run_app"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
