[project]
name = "defense_quickstart_news_scraper_summarizer"
version = "0.0.1"
description = "Scrape Ukrainian news articles, translate them to English, and summarize key points in just a few steps with this example repository"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.6",
    "restack-ai==0.0.81",
    "watchfiles>=1.0.4",
    "python-dotenv==1.0.1",
    "openai>=1.61.0",
    "fastapi==0.115.4",
    "uvicorn==0.32.0",
    "streamlit==1.40.0",
    "requests==2.32.3",
    "bs4==0.0.2",
]

[project.scripts]
services = "src.services:run_services"
app = "src.app:run_app"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
