[project]
name = "elvenlabs"
version = "0.0.1"
description = "A simple example to get started with the restack-ai SDK with elevenlabs"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.6",
    "restack-ai==0.0.81",
    "watchfiles>=1.0.4",
    "python-dotenv==1.0.1",
    "openai>=1.61.0",
    "elevenlabs>=1.50.6",
]

[project.scripts]
dev = "src.services:watch_services"
services = "src.services:run_services"
text_to_speech = "schedule_workflow:run_schedule_workflow"
voice_isolation = "schedule_workflow_audio_isolation:run_schedule_workflow_audio_isolation"

[dependency-groups]
dev = ["pytest==6.2"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
