[project]
name = "email_sender"
version = "0.0.1"
description = "Send emails with sendgrid"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.6",
    "restack-ai==0.0.81",
    "watchfiles>=1.0.4",
    "python-dotenv==1.0.1",
    "openai>=1.61.0",
    "sendgrid==6.11.0",
]

[project.scripts]
services = "src.services:run_services"
schedule = "schedule_workflow:run_schedule_workflow"
schedule_failure = "schedule_workflow_failure:run_schedule_workflow_failure"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
