[project]
name = "fastapi_gemini_feedback"
version = "0.0.1"
description = "A simple example to generate content using Google Gemini"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.6",
    "restack-ai==0.0.81",
    "watchfiles>=1.0.4",
    "python-dotenv==1.0.1",
    "google-generativeai==0.8.3",
    "fastapi==0.115.4",
    "click==8.1.7",
    "anyio==4.6.2.post1",
]

[project.scripts]
services = "src.services:run_services"
app = "src.app:run_app"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
