[project]
name = "fastapi_togetherai_llama"
version = "0.0.1"
description = "A simple example showcasing fastapi, togetherai and llamaindex"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "fastapi==0.115.4",
    "llama-index==0.11.22",
    "llama-index-llms-together==0.2.0",
    "uvicorn==0.32.0",
    "python-dotenv==1.0.1",
    "restack-ai>=0.0.77",
]

[project.scripts]
services = "src.services:run_services"
app = "src.app:run_app"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
