[project]
name = "flask_gemini"
version = "0.0.1"
description = "A simple example to generate content using Google Gemini"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.6",
    "restack-ai==0.0.81",
    "watchfiles>=1.0.4",
    "python-dotenv==1.0.1",
    "flask[async]==3.0.3",
    "flask-cors==5.0.0",
    "google-generativeai==0.8.3",
]

[project.scripts]
services = "src.services:run_services"
schedule = "schedule_workflow:run_schedule_workflow"
flask = "src.app:run_flask"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
