[project]
name = "flask_togetherai_llamaindex"
version = "0.0.1"
description = "A simple example to demonstrate usage TogetherAI and LlamaIndex"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.6",
    "restack-ai==0.0.81",
    "watchfiles>=1.0.4",
    "python-dotenv==1.0.1",
    "llama-index==0.11.22",
    "llama-index-llms-together==0.2.0",
    "flask[async]==3.0.3",
    "flask-cors==5.0.0",
]

[project.scripts]
services = "src.services:run_services"
flask = "src.app:run_flask"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
