[project]
name = "re_act_example"
version = "0.0.1"
description = "ReAct Example"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.6",
    "restack-ai==0.0.81",
    "watchfiles>=1.0.4",
    "python-dotenv==1.0.1",
    "openai>=1.61.0",
    "sendgrid==6.11.0",
]

[project.scripts]
dev = "src.services:watch_services"
services = "src.services:run_services"
schedule_workflow = "schedule_workflow:run_schedule_workflow"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
