[project]
name = "stripe_ai"
version = "0.0.1"
description = "Send emails with sendgrid"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.6",
    "restack-ai==0.0.81",
    "watchfiles>=1.0.4",
    "python-dotenv==1.0.1",
    "pydantic>=2.10.3,<3",
    "openai>=1.61.0",
    "stripe-agent-toolkit>=0.1.21,<0.2",
    "langchain>=0.3.9,<0.4",
    "stripe>=11.3.0,<12",
    "langchain-openai>=0.2.11,<0.3",
]

[project.scripts]
services = "src.services:run_services"
schedule = "schedule_workflow:run_schedule_workflow"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
